--- a/package.json
+++ b/package.json
@@ -3,14 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/core": "^7.22.1",
+    "@babel/preset-env": "^7.22.2",
     "@react-three/drei": "^9.67.0",
     "@react-three/fiber": "^8.13.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "babel-plugin-glsl": "^1.0.0",
+    "curtainsjs": "^8.1.4",
     "framer-motion": "^10.12.12",
     "nanoid": "^4.0.2",
     "react": "^18.2.0",
+    "react-curtains": "^1.0.10",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
