--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@testing-library/user-event": "^13.5.0",
     "babel-plugin-glsl": "^1.0.0",
     "curtainsjs": "^8.1.4",
-    "framer-motion": "^10.12.12",
+    "framer-motion": "^10.12.16",
+    "glsl-chromatic-aberration": "^1.0.1",
     "nanoid": "^4.0.2",
     "react": "^18.2.0",
     "react-curtains": "^1.0.10",
