--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "glsl-chromatic-aberration": "^1.0.1",
     "nanoid": "^4.0.2",
     "react": "^18.2.0",
+    "react-animated-cursor": "^2.7.0",
     "react-curtains": "^1.0.10",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.1",
