--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@babel/preset-env": "^7.22.2",
     "@react-three/drei": "^9.67.0",
     "@react-three/fiber": "^8.13.0",
+    "@splidejs/react-splide": "^0.7.12",
+    "@splidejs/splide-extension-auto-scroll": "^0.5.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -22,7 +24,8 @@
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
     "three": "^0.152.2",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "zustand": "^4.3.8"
   },
   "scripts": {
     "start": "react-scripts --max_old_space_size=4096 start",
